// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comprehensive anchor and attachment rendering > preserves layout instructions and attachments with constrained budget > comprehensive-tight-budget 1`] = `
[
  {
    "content": "[Author Note] Focus on sensory detail and tension between Alice and Bob.
=== Scenario Setup ===
=== Recent Turns ===",
    "role": "system",
  },
  {
    "content": "[Turn 1] Alice: The morning sun cast long shadows across the courtyard as Alice approached the ancient fountain.",
    "role": "user",
  },
  {
    "content": "[Lore] The breeze carries a scent tied to ancient rituals.",
    "role": "system",
  },
  {
    "content": "[Turn 2] Bob: Bob looked up from his book, startled by the sound of footsteps on the cobblestones.",
    "role": "user",
  },
  {
    "content": "=== End Turns ===
[Lore] A fountain here predates the Academy and grants visions under moonlight.
Instruction: Maintain mystery and reference the fountain.
=== Cast Overview ===
[Lore] Global reminder: mention the guardian spirits at least once.",
    "role": "system",
  },
]
`;

exports[`Comprehensive anchor and attachment rendering > renders anchors, instructions, and attachments under generous budget > comprehensive-standard 1`] = `
[
  {
    "content": "[Author Note] Focus on sensory detail and tension between Alice and Bob.
=== Scenario Setup ===
=== Recent Turns ===",
    "role": "system",
  },
  {
    "content": "[Turn 1] Alice: The morning sun cast long shadows across the courtyard as Alice approached the ancient fountain.
[Turn 2] Bob: Bob looked up from his book, startled by the sound of footsteps on the cobblestones.
[Turn 3] Narrator: A gentle breeze carried the scent of jasmine through the air, creating an almost magical atmosphere.",
    "role": "user",
  },
  {
    "content": "[Lore] A fountain here predates the Academy and grants visions under moonlight.
[Lore] The breeze carries a scent tied to ancient rituals.",
    "role": "system",
  },
  {
    "content": "[Turn 4] Charlie: Charlie emerged from behind the pillar, a mysterious smile playing on their lips.
[Turn 5] Alice: "I wasn't expecting to find anyone else here," Alice said, her voice echoing softly in the courtyard.
[Turn 6] Bob: Bob closed his book carefully and stood up, brushing dust from his robes.",
    "role": "user",
  },
  {
    "content": "=== End Turns ===
Instruction: Maintain mystery and reference the fountain.
=== Cast Overview ===
- Alice: A determined young mage with auburn hair and emerald eyes. Known for her analytical mind and unwavering moral compass. She specializes in protective magic and has a natural talent for seeing through illusions.
- Bob: A scholarly wizard who carries himself with quiet confidence. His expertise lies in ancient languages and historical magic. Bob often serves as the voice of caution and wisdom in the group.
- Charlie: An enigmatic figure whose past remains largely mysterious. Charlie appears to have connections to powerful magical forces and often knows more than they reveal. Their motives are unclear but seem aligned with the greater good.
[Lore] Global reminder: mention the guardian spirits at least once.",
    "role": "system",
  },
]
`;
